--- a/show_container.ejs
+++ b/show_container.ejs
@@ -1,7 +1,7 @@
-<div class='container-fluid' id='show-container-<%=id%>'>
+<div class='show-container' id='show-container-<%=id%>'>
     <div class='row'>
         <div class='col-md-3'>
-            <h3><%=name%> <i onclick="removeShow(<%=id%>)"class='fa fa-times'></i></h3>
+            <h3><i onclick="removeShow(<%=id%>)"class='fa fa-times'></i> <%=name%> </h3>
             <img src="<%=image.medium%>" />
         </div>
         <div class='col-md-9'>
