--- a/show_container.ejs
+++ b/show_container.ejs
@@ -1,10 +1,10 @@
 <div class='show-container' id='show-container-<%=id%>'>
-    <div class='row'>
-        <div class='col-md-3'>
+    <div class="flex-container">
+        <div style="margin-right: 2em;">
             <h3><i onclick="removeShow(<%=id%>)"class='fa fa-times'></i> <%=name%> </h3>
             <img src="<%=image.medium%>" />
         </div>
-        <div class='col-md-9'>
+        <div>
             <h4>Latest Episode: S<%=_embedded.previousepisode.season%>E<%=_embedded.previousepisode.number%> - <%=_embedded.previousepisode.name%></h4>
 
             <%
